package com.nn.safetransfer.wallet.domain;

public record Customer() {
}
