package com.nn.safetransfer.wallet.domain;

public record Tenant() {
}
